Added satalite image background

--- a/static/index.html
+++ b/static/index.html
@@ -5,7 +5,12 @@
         <title>Project Koskelantie</title>
         <style>
             body {
+                font-size: 20px;
                 background-color: #0E540F;
+                background-image: url('koskelatie.png');
+                background-repeat: no-repeat;
+                background-attachment: fixed;  
+                background-size: cover;
                 padding: 0;
                 margin: 0;
             }
