--- a/static/index.html
+++ b/static/index.html
@@ -1,8 +1,10 @@
 <!doctype html>
 <html lang="en">
     <head>
-        <meta charset="utf-8">
         <title>Project Koskelantie</title>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <link rel="stylesheet" href="https://unpkg.com/picnic" />        
         <style>
             body {
                 font-size: 20px;
@@ -22,20 +24,7 @@
             
             p {
                 color: white;
-                font-family: verdana;
                 font-size: 20px;
-            }
-            button {
-                color: white;
-                background-color: #408080;
-                padding: 0;
-                margin: 0;
-                width:200px;
-                height:40px;
-                border-radius: 10px;
-                font-size: 20px;
-                margin-right: 50px;
-                margin-: 50px;
             }
             img {
                 border-radius: 30px;
@@ -47,5 +36,8 @@
         </script>
     </head>
     <body>        
+        <div id="app">
+            There should be a Yew application mounted on this DOM element.
+        </div>
     </body>
 </html>
