Add an example of making a fetch

--- a/static/index.html
+++ b/static/index.html
@@ -15,20 +15,17 @@
                 background-size: cover;
                 padding: 0;
                 margin: 0;
-            }
+            }            
             
             h1 {
-                color: white;
-                text-align: center;
+                color: #9a2e2e;;
             }
             
             p {
-                color: white;
+                color: #9a2e2e;;
                 font-size: 20px;
             }
-            img {
-                border-radius: 30px;
-            }
+
         </style>        
         <script type="module">
             import init from "./wasm.js"
@@ -37,7 +34,7 @@
     </head>
     <body>        
         <div id="app">
-            There should be a Yew application mounted on this DOM element.
+            Project Koskelantie.
         </div>
     </body>
 </html>
